--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/node": "16.11.7",
     "@types/sinon": "10.0.11",
     "@types/supertest": "2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
     "chai": "4.3.6",
@@ -53,6 +55,8 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "mongoose": "6.1.8",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0",
     "zod": "3.11.6"
   }
 }
