--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest -i --forceExit --verbose",
     "test:dev": "mocha -r ts-node/register src/tests/unit/**/*.test.ts --exit -t 60000",
-    "test:int": "mocha -r ts-node/register src/tests/integration/**/*.test.ts --exit -t 60000",
+    "test:integration": "mocha -r ts-node/register src/tests/integration/**/*.test.ts --exit -t 60000",
     "test:coverage": "nyc npm run test:dev"
   },
   "devDependencies": {
